# os1-samantha

./: .gitignore  .swift-format  CONTRIBUTING.md  Makefile  README.md  SAMANTHA.md  pyproject.toml
.github/: dependabot.yml
.github/rulesets/: main-protection.json
.github/workflows/: build-artifact-guard.yml  ci.yml  codeql.yml  coverage.yml  dependency-review.yml  deploy-pages.yml  lint.yml  scorecard.yml
Evals/: README.md
Tests/OS1Tests/: CodexSessionManagerTests.swift  CompanyAbuseContainmentTests.swift  CompanyAccessControlTests.swift  CompanyAnalyticsTests.swift  CompanyApprovalQueueACTests.swift  CompanyApprovalTests.swift  CompanyAutomationPrimitivesTests.swift  CompanyBookkeepingTests.swift  CompanyBrowserAutomationTests.swift  CompanyBudgetGuardianTests.swift  CompanyBusinessModelPlaybookTests.swift  CompanyCRMTests.swift  CompanyCodexPortfolioInfrastructureTests.swift  (+73 more)
docs/: backup-restore.md  branch-protection.md  codex-features.md  codex-heartbeat-sandbox.md  connectors-smoketest.md  credential-revocation.md  data-governance.md  production-operating-model.md  tax-export.md
launchd/: com.os1.app.plist  com.os1.app.plist.template  com.os1.coo.plist  com.os1.coo.plist.template  com.os1.samantha-bot.plist  com.os1.samantha-bot.plist.template  com.os1.wuphf.plist  com.os1.wuphf.plist.template
packaging/: OS1.icns
scripts/: build-app-icon.py  build-macos-app.sh  check-launchd-templates.py  export-tax.py  install-hooks.sh  install-launch-agents.sh  notarize.sh  release-smoke.sh  run-evals.py  wuphf-stripe-webhook-proxy.py
vm-launchers/: claude.desktop  codex.desktop
(+132 files in other folders)
